ajout source couche wms

--- a/docs/CarteWMS.mdx
+++ b/docs/CarteWMS.mdx
@@ -32,9 +32,9 @@ class CarteWMS extends Component {
     // Déclaration de la source de la couche en format WMS Tuilé 
     this.sourceWMSTile = new TileWMS({
 	// Chargement du lien WMS 
-	url: 'https://map.geomatick.com/geoserver/wms',
+	url: 'https://ahocevar.com/geoserver/wms',
 	// Chargement de l'espace de travail : couche 
-	params: {'LAYERS': 'topp:states', 'TILED': true},
+	params: {'LAYERS': 'ne:ne', 'TILED': true},
 	serverType: 'geoserver'
     })
     // Déclaration de la couche WMS Tuilé
@@ -46,9 +46,9 @@ class CarteWMS extends Component {
     // Déclaration de la source de la couche en format WMS Image
     this.sourceWMSImage = new ImageWMS({
 	// Chargement du lien WMS 
-	url: 'https://map.geomatick.com/geoserver/wms',
+	url: 'https://ahocevar.com/geoserver/wms',
 	// Chargement de l'espace de travail : couche 
-	params: {'LAYERS': 'tiger:poly_landmarks'},
+	params: {'LAYERS': 'ne:ne'},
 	serverType: 'geoserver'
     });
     // Déclaration de la couche WMS 
