--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,8 +3,13 @@ name: Introduction
 route: /docs
 ---
 
-# Getting Started
 
-## Hello world
+## Bonjour et bienvenue !
 
-Type here the most beautyiful getting started that you ever saw!
+Ma reconversion dans le developpement web depuis 2018 est à l'origine de ma formation React et mon intérêt pour le webmapping  m'a amené à decouvrir OpenLayers.
+
+Afin que les heures passées à me former et découvrir OpenLayers, soient bénéfiques, j'ai souhaité garder une trace de mon code en créant une collection d'exemples au fur et à mesure de mon apprentissage.
+
+Je partage avec plaisir mes exemples et accepte volontier toute contribution, remarque ou commentaire permettant d' améliorer ou  agrandir la collection.
+
+En espérant que cette collection vous soit utile ! 
