--- a/docs/MapView.mdx
+++ b/docs/MapView.mdx
@@ -6,13 +6,22 @@ menu: La classe Map
 import { Playground } from 'docz'
 import MapView from './MapView'
 
-carte
+La classe [Map](https://openlayers.org/en/latest/apidoc/module-ol_Map-Map.html) est le composant principal d'OpenLayers.
+
+Pour qu'une carte soit rendue, sont nécessaires: 
+- Une VUE :  
+      permet de définir l'étendue géographique et le centre de la carte, les niveaux de zoom et la projection de la carte. Elle est définie par la classe [View](https://openlayers.org/en/latest/apidoc/module-ol_View.html). 
+- Une ou plusieurs COUCHES:  
+      L'option `layers` contient les couches SIG dans un tableau, ici, on utilise la couche  [OpenStreetMap](https://openlayers.org/en/latest/apidoc/module-ol_source_OSM.html) à titre d'exemple.
+- Un CONTENEUR CIBLE:  
+      permet de choisir l'emplacement de la carte dans le document par l'option `target`
 
 <MapView />
 
 ```js static
 import React, { Component } from 'react'
 
+// classes nécéssaires pour afficher la carte
 import 'ol/ol.css'
 import Map from 'ol/Map'
 import View from 'ol/View'
@@ -43,31 +52,12 @@ class MapView extends Component {
     })
   }
 
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center)
-    this.olmap.getView().setZoom(this.state.zoom)
-  }
-
   componentDidMount() {
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget('map1')
-
-    // Listen to map changes
-    this.olmap.on('moveend', () => {
-      let center = this.olmap.getView().getCenter()
-      let zoom = this.olmap.getView().getZoom()
-      this.setState({ center, zoom })
-    })
-  }
-
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter()
-    let zoom = this.olmap.getView().getZoom()
-    if (center === nextState.center && zoom === nextState.zoom) return false
-    return true
   }
 
   render() {
-    this.updateMap() // Update map on render?
     return <div id="map1" style={{ width: '100%', height: '360px' }}></div>
   }
 }
