--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -6,9 +6,9 @@ route: /docs
 
 ## Bonjour et bienvenue !
 
-Ma reconversion dans le developpement web depuis 2018 est à l'origine de ma formation React et mon intérêt pour le webmapping  m'a amené à decouvrir OpenLayers.
+Ma reconversion dans le developpement web depuis 2018 est à l'origine de ma formation [React](https://fr.reactjs.org/) et mon intérêt pour le webmapping  m'a amené à decouvrir [OpenLayers](https://openlayers.org/).
 
-Afin que les heures passées à me former et découvrir OpenLayers, soient bénéfiques, j'ai souhaité garder une trace de mon code en créant une collection d'exemples au fur et à mesure de mon apprentissage.
+Afin que les heures passées à me former et découvrir OpenLayers, soient bénéfiques, j'ai souhaité garder une trace de mon code en créant une collection d'exemples avec [Gatsby](https://www.gatsbyjs.org/) et [Docz](https://www.gatsbyjs.org/tutorial/writing-documentation-with-docz/) au fur et à mesure de mon apprentissage.
 
 Je partage avec plaisir mes exemples et accepte volontier toute contribution, remarque ou commentaire permettant d' améliorer ou  agrandir la collection.
 
