ajout commentaire - centrer la carte

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -8,8 +8,9 @@ route: /docs
 
 Ma reconversion dans le developpement web depuis 2018 est à l'origine de ma formation [React](https://fr.reactjs.org/) et mon intérêt pour le webmapping  m'a amené à decouvrir [OpenLayers](https://openlayers.org/).
 
-Afin que les heures passées à me former et découvrir OpenLayers, soient bénéfiques, j'ai souhaité garder une trace de mon code en créant une collection d'exemples avec [Gatsby](https://www.gatsbyjs.org/) et [Docz](https://www.gatsbyjs.org/tutorial/writing-documentation-with-docz/) au fur et à mesure de mon apprentissage.
+La création de cette collection d'exemples me permet de structurer mes connaissances au fur et à mesure de mon apprentissage. C'est aussi une sorte de bloc-notes sur lequel je peux revenir.
 
-Je partage avec plaisir mes exemples et accepte volontier toute contribution, remarque ou commentaire permettant d' améliorer ou  agrandir la collection.
+Consciente que l’évolution du savoir est beaucoup plus rapide par l’échange je partage avec plaisir mon code et accepte volontier toute critique constructive permettant d' améliorer ou  agrandir la collection.
 
 En espérant que cette collection vous soit utile ! 
+
