--- a/docs/Projection.mdx
+++ b/docs/Projection.mdx
@@ -1,23 +1,28 @@
 ---
-name: Changer la projection
+name: Centrer la carte
 menu: La classe Map
 ---
 
 import { Playground } from 'docz'
 import Projection from './Projection'
 
+Il est possible de spécifier la [projection](https://openlayers.org/en/latest/apidoc/module-ol_proj.html) dans la vue qui par défaut, est l'EPSG:3857 ainsi que l'EPSG:4326.
+
+Le code suivant introduit le centrage de la carte avec une transformation de la projection des coordonnées géographiques avec la méthode [fromLonLat](https://openlayers.org/en/latest/apidoc/module-ol_proj.html#.fromLonLat)
 
 <Projection />
 
 ```jsx 
 import React, { Component } from "react";
 
+// classes nécéssaires pour afficher la carte
 import 'ol/ol.css';
 import Map from 'ol/Map';
 import View from 'ol/View';
 import TileLayer from 'ol/layer/Tile';
 import OSM from 'ol/source/OSM';
 
+// Transforme une coordonnée de longitude / latitude en une projection différente
 import {fromLonLat} from 'ol/proj';
 
 class Projection extends Component {
@@ -26,7 +31,7 @@ class Projection extends Component {
 
     this.state = { 
         center: fromLonLat([1.3529599,44.0221252]), 
-        zoom: 10 
+        zoom: 10, 
     };
 
     this.olmap = new Map({
@@ -38,37 +43,17 @@ class Projection extends Component {
       ],
       view: new View({
         center: this.state.center,
-        zoom: this.state.zoom
+        zoom: this.state.zoom,
       })
     });
   }
 
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center);
-    this.olmap.getView().setZoom(this.state.zoom);
-  }
-
   componentDidMount() {
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget("map2");
-
-    // Listen to map changes
-    this.olmap.on("moveend", () => {
-      let center = this.olmap.getView().getCenter();
-      let zoom = this.olmap.getView().getZoom();
-      this.setState({ center, zoom });
-    });
   }
-
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter();
-    let zoom = this.olmap.getView().getZoom();
-    if (center === nextState.center && zoom === nextState.zoom) return false;
-    return true;
-  }
-
 
   render() {
-    this.updateMap(); // Update map on render?
     return (
       <div id="map2" style={{ width: "100%", height: "360px" }}>
       </div>
