ajout commentaire - les évènements

--- a/docs/Controles.mdx
+++ b/docs/Controles.mdx
@@ -54,6 +54,7 @@ class Controles extends Component {
         zoom: 10 
     };
 
+    // Déclaration de la carte
     this.olmap = new Map({
       target: null,
       layers: [
