--- a/docs/Evenements.mdx
+++ b/docs/Evenements.mdx
@@ -6,11 +6,24 @@ menu: La classe Map
 import { Playground } from 'docz'
 import Evenements from './Evenements'
 
+De nombreuses méthodes sont liées à la classe [Map](https://openlayers.org/en/latest/apidoc/module-ol_Map-Map.html) et elles peuvent être déclenchées à partir d'actions appelées "Fires".
+Les plus utilisées sont `on(type, listener, opt_this)`, `once(type, listener, opt_this)`qui contiennent une fonction afin d'obtenir des informations de la classe "parent".
+
+Il y a 5 types de déclencheurs:
+- [Event](https://openlayers.org/en/latest/apidoc/module-ol_events_Event-Event.html) : un évènement quelconque par le fire change.
+- [ObjectEvent](https://openlayers.org/en/latest/apidoc/module-ol_Object.ObjectEvent.html) : Les évènements liés a un objet de la classe Map.
+- [MapBrowserEvent](https://openlayers.org/en/latest/apidoc/module-ol_MapBrowserEvent-MapBrowserEvent.html) : Les évènements liés au navigateur web (click, dblclick, pointerdrag, pointermove, singleclick).
+- [MapEvent](https://openlayers.org/en/latest/apidoc/module-ol_MapEvent-MapEvent.html) : Les évènement liés à la carte (moveend, movestart, postrender).
+- [RenderEvent](https://openlayers.org/en/latest/apidoc/module-ol_render_Event-RenderEvent.html) : Les évènements liés à un rendu du document (postcompose, precompose). 
+
+L'exemple ci-après montre comment obtenir le niveau de zoom (dans la console) à la fin du défilement de la carte.
 
 <Evenements />
 
 ```jsx
 import React, { Component } from "react";
+
+// classes nécéssaires pour afficher la carte
 import Map from 'ol/Map';
 import View from 'ol/View';
 import TileLayer from 'ol/layer/Tile';
@@ -26,6 +39,7 @@ class Evenements extends Component {
         zoom: 2 
     };
 
+    // Déclaration de la carte
     this.olmap = new Map({
       target: null,
       layers: [
@@ -40,17 +54,12 @@ class Evenements extends Component {
     });
   }
 
-  
-
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center);
-    this.olmap.getView().setZoom(this.state.zoom);
-  }
-
   componentDidMount() {
+
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget("map5");
 
-    // Listen to map changes
+    // Écoute les changements de carte
     this.olmap.on("moveend", () => {
       let center = this.olmap.getView().getCenter();
       let zoom = this.olmap.getView().getZoom();
@@ -60,16 +69,7 @@ class Evenements extends Component {
     });
   }
 
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter();
-    let zoom = this.olmap.getView().getZoom();
-    if (center === nextState.center && zoom === nextState.zoom) return false;
-    return true;
-  }
-
-
   render() {
-    this.updateMap(); // Update map on render?
     return (
       <div id="map5" style={{ width: "100%", height: "360px" }}>
       </div>
