--- a/docs/FondCarteStamenTerrain.mdx
+++ b/docs/FondCarteStamenTerrain.mdx
@@ -3,82 +3,61 @@ name: Fond de carte ol Stamen Terrain
 menu: Les couches SIG
 ---
 
-import { Playground } from 'docz'
-import FondCarteStamenTerrain from './FondCarteStamenTerrain'
+import { Playground } from "docz"
+import FondCarteStamenTerrain from "./FondCarteStamenTerrain"
 
+OpenLayers implémente directement plusieurs fonds de carte dans son API, ainsi on dispose des sources de données tuilées suivantes : BingMaps (avec clé), Stamen, CartoDB (avec clé) et OpenStreetMap (OSM).
 
 <FondCarteStamenTerrain />
 
 ```jsx
-import React, { Component } from "react";
-import Map from 'ol/Map';
-import View from 'ol/View';
-import TileLayer from 'ol/layer/Tile';
-import 'ol/ol.css';
+import React, { Component } from "react"
 
-import Stamen from 'ol/source/Stamen';
+// classes nécéssaires pour afficher la carte
+import Map from "ol/Map"
+import View from "ol/View"
+import TileLayer from "ol/layer/Tile"
+import "ol/ol.css"
+
+// Source de couche pour le serveur de tuiles Stamen.
+import Stamen from "ol/source/Stamen"
 
 class FondCarteStamenTerrain extends Component {
   constructor(props) {
-    super(props);
+    super(props)
 
-    this.state = { 
-        center: [0, 0], 
-        zoom: 2 
-    };
+    this.state = {
+      center: [0, 0],
+      zoom: 2,
+    }
 
-  // Stamen Terrain 
+    // Stamen Terrain
     this.StamenTerrain = new TileLayer({
-	title: 'Stamen Terrain',
-	preload: Infinity,
-	source: new Stamen({
-		layer: 'terrain',
-	}),
-	visible: true
-    });  
+      source: new Stamen({
+        layer: "terrain",
+      }),
+    })
 
+    // Déclaration de la carte
     this.olmap = new Map({
       target: null,
       layers: [this.StamenTerrain],
       view: new View({
         center: this.state.center,
-        zoom: this.state.zoom
-      })
-    });
-  }
-
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center);
-    this.olmap.getView().setZoom(this.state.zoom);
+        zoom: this.state.zoom,
+      }),
+    })
   }
 
   componentDidMount() {
-    this.olmap.setTarget("map10");
-
-    // Listen to map changes
-    this.olmap.on("moveend", () => {
-      let center = this.olmap.getView().getCenter();
-      let zoom = this.olmap.getView().getZoom();
-      this.setState({ center, zoom });
-    });
+    // Défini l'id de l'élément dans lequel la carte est rendue.
+    this.olmap.setTarget("map10")
   }
-
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter();
-    let zoom = this.olmap.getView().getZoom();
-    if (center === nextState.center && zoom === nextState.zoom) return false;
-    return true;
-  }
-
 
   render() {
-    this.updateMap(); // Update map on render?
-    return (
-      <div id="map10" style={{ width: "100%", height: "360px" }}>
-      </div>
-    );
+    return <div id="map10" style={{ width: "100%", height: "360px" }}></div>
   }
 }
 
-export default FondCarteStamenTerrain;
+export default FondCarteStamenTerrain
 ```
