--- a/docs/CarteWMS.mdx
+++ b/docs/CarteWMS.mdx
@@ -3,57 +3,76 @@ name: Le protocole WMS
 menu: Les couches SIG
 ---
 
-import { Playground } from 'docz'
-import CarteWMS from './CarteWMS'
+import { Playground } from "docz"
+import CarteWMS from "./CarteWMS"
+
+Le Web Map Service (WMS) fournit une image géoréférencée. 
+
+Il existe plusieurs manières de charger les protocoles WMS :
+- En tant qu'image par la classe [ImageWMS](https://openlayers.org/en/latest/apidoc/module-ol_source_ImageWMS.html)  pour la source de données et la classe [ImageLayer](https://openlayers.org/en/latest/apidoc/module-ol_layer_Image-ImageLayer.html)  pour afficher la couche SIG 
+- En tant que donnée tuilée depuis un serveur WMS par la classe [TileWMS](https://openlayers.org/en/latest/apidoc/module-ol_source_TileWMS.html)  pour la source et [TileLayer](https://openlayers.org/en/latest/apidoc/module-ol_layer_Tile-TileLayer.html)  pour la couche SIG
+
+L'exemple montre comment utiliser des flux WMS en format Tuilé et Image
 
 
 <CarteWMS />
 
 ```JSX
 import React, { Component } from "react";
+
+// classes nécéssaires pour afficher la carte
 import Map from 'ol/Map';
 import View from 'ol/View';
 import 'ol/ol.css';
 
+// Source de couche pour les données de mosaïque provenant de serveurs WMS.
 import TileWMS from 'ol/source/TileWMS';
+
+// Pour les sources de calques qui fournissent des images en mosaïque
 import TileLayer from 'ol/layer/Tile';
+
+// Source pour les serveurs WMS fournissant des images uniques non terminées.
 import ImageWMS from 'ol/source/ImageWMS';
+
+// Images rendues par le serveur disponibles pour des extensions et des résolutions arbitraires.
 import ImageLayer from 'ol/layer/Image';
 
 class CarteWMS extends Component {
   constructor(props) {
     super(props);
 
-    this.state = { 
-        center: [-8233510, 4980620], 
-        zoom: 5 
+    this.state = {
+        center: [-8233510, 4980620],
+        zoom: 5
     };
 
-    // Déclaration de la source de la couche en format WMS Tuilé 
+    // Déclaration de la source de la couche en format WMS Tuilé
     this.sourceWMSTile = new TileWMS({
-	// Chargement du lien WMS 
+	// Chargement du lien WMS
 	url: 'https://ahocevar.com/geoserver/wms',
-	// Chargement de l'espace de travail : couche 
+	// Chargement de l'espace de travail : couche
 	params: {'LAYERS': 'ne:ne', 'TILED': true},
 	serverType: 'geoserver'
     })
     // Déclaration de la couche WMS Tuilé
-    this.coucheWMTile = new TileLayer({ 
+    this.coucheWMTile = new TileLayer({
 	source: this.sourceWMSTile,
 	opacity: 0.5
     });
 
     // Déclaration de la source de la couche en format WMS Image
     this.sourceWMSImage = new ImageWMS({
-	// Chargement du lien WMS 
+	// Chargement du lien WMS
 	url: 'https://ahocevar.com/geoserver/wms',
-	// Chargement de l'espace de travail : couche 
+	// Chargement de l'espace de travail : couche
 	params: {'LAYERS': 'ne:ne'},
 	serverType: 'geoserver'
     });
-    // Déclaration de la couche WMS 
+    // Déclaration de la couche WMS
     this.coucheWMSImage = new ImageLayer({ source: this.sourceWMSImage });
 
+
+    // Déclaration de la carte
     this.olmap = new Map({
       target: null,
       layers: [this.coucheWMTile,this.coucheWMSImage ],
@@ -64,32 +83,12 @@ class CarteWMS extends Component {
     });
   }
 
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center);
-    this.olmap.getView().setZoom(this.state.zoom);
-  }
-
   componentDidMount() {
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget("map9");
-
-    // Listen to map changes
-    this.olmap.on("moveend", () => {
-      let center = this.olmap.getView().getCenter();
-      let zoom = this.olmap.getView().getZoom();
-      this.setState({ center, zoom });
-    });
   }
-
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter();
-    let zoom = this.olmap.getView().getZoom();
-    if (center === nextState.center && zoom === nextState.zoom) return false;
-    return true;
-  }
-
 
   render() {
-    this.updateMap(); // Update map on render?
     return (
       <div id="map9" style={{ width: "100%", height: "360px" }}>
       </div>
