--- a/docs/StylesGeometry.mdx
+++ b/docs/StylesGeometry.mdx
@@ -6,6 +6,10 @@ menu: Les styles
 import { Playground } from 'docz'
 import StylesGeometry from './StylesGeometry'
 
+Pour observer les géométries basiques d'une entité géographique (point, ligne, polygone ou cercle) on aura besoin :
+- d' un contour avec la classe [Stroke](https://openlayers.org/en/latest/apidoc/module-ol_style_Stroke-Stroke.html) auquel on associe une couleur, un type de ligne et une épaisseur
+- d'un remplissage avec la classe [Fill](https://openlayers.org/en/latest/apidoc/module-ol_style_Fill.html) auquel on associe une couleur
+- et pour le cercle la classe [CircleStyle](https://openlayers.org/en/latest/apidoc/module-ol_style_Circle-CircleStyle.html) avec une dimension de rayon radius
 
 <StylesGeometry />
 
@@ -112,31 +116,12 @@ class StylesGeometry extends Component {
     });
   }
 
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center);
-    this.olmap.getView().setZoom(this.state.zoom);
-  }
-
   componentDidMount() {
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget("map13");
-
-    // Listen to map changes
-    this.olmap.on("moveend", () => {
-      let center = this.olmap.getView().getCenter();
-      let zoom = this.olmap.getView().getZoom();
-      this.setState({ center, zoom });
-    });
-  }
-
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter();
-    let zoom = this.olmap.getView().getZoom();
-    if (center === nextState.center && zoom === nextState.zoom) return false;
-    return true;
   }
 
   render() {
-    this.updateMap(); // Update map on render?
     return <div id="map13" style={{ width: "100%", height: "360px" }} />;
   }
 }
