--- a/docs/Clusters.mdx
+++ b/docs/Clusters.mdx
@@ -6,6 +6,8 @@ menu: Les groupes de couches, clusters et overlays
 import { Playground } from 'docz'
 import Clusters from './Clusters'
 
+La classe [Cluster](https://openlayers.org/en/latest/apidoc/module-ol_source_Cluster-Cluster.html) permet de regrouper et de montrer le nombre
+d'entités géographiques d'un vecteur en focntion d'un niveau de zoom sur la carte.
 
 <Clusters />
 
@@ -116,32 +118,13 @@ class Clusters extends Component {
     });
   }
 
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center);
-    this.olmap.getView().setZoom(this.state.zoom);
-  }
 
   componentDidMount() {
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget("map16");
-
-    // Listen to map changes
-    this.olmap.on("moveend", () => {
-      let center = this.olmap.getView().getCenter();
-      let zoom = this.olmap.getView().getZoom();
-      this.setState({ center, zoom });
-    });
-  }
-
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter();
-    let zoom = this.olmap.getView().getZoom();
-    if (center === nextState.center && zoom === nextState.zoom) return false;
-    return true;
   }
 
   render() {
-    this.updateMap(); // Update map on render?
-
     return (
       
         <div id="map16" style={{ width: "100%", height: "360px" }} />
