--- a/docs/Translation.mdx
+++ b/docs/Translation.mdx
@@ -64,6 +64,7 @@ class Translation extends Component {
   }
 
   componentDidMount() {
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget("map22");
 
     // Déclaration de l'interaction
