--- a/docs/Selection.mdx
+++ b/docs/Selection.mdx
@@ -6,6 +6,15 @@ menu: Les interractions
 import { Playground } from 'docz'
 import Selection from './Selection'
 
+La classe [Select](https://openlayers.org/en/latest/apidoc/module-ol_interaction_Select-Select.html), comme son nom l'indique,
+permet de sélectionner des entités géographiques du vecteur.
+Elle est fournie avec de nombreuses options comme
+les conditions de sélection (au clic par exemple),
+les filtres de sélection des couches
+et la récupération des objets et le style des entités selectionnées.
+De manière basique, on instancie la classe puis on l'ajoute à l'objet Map.
+Par défaut, la sélection s'applique au clic sur une entité du vecteur avec un style générique.
+On note que les entités sélectionnées sont ajoutées à une couche interne à l'API non déclarée dans le script.
 
 <Selection />
 
@@ -56,37 +65,17 @@ class Selection extends Component {
     });
   }
 
-  updateMap() {
-    this.olmap.getView().setCenter(this.state.center);
-    this.olmap.getView().setZoom(this.state.zoom);
-  }
-
   componentDidMount() {
+    // Défini l'id de l'élément dans lequel la carte est rendue.
     this.olmap.setTarget("map17");
 
     // Déclaration de l'interaction
     this.interactionSelect = new Select();
     // Ajout de l'interaction à l'objet Map
     this.olmap.addInteraction(this.interactionSelect);
-
-    // Listen to map changes
-    this.olmap.on("moveend", () => {
-      let center = this.olmap.getView().getCenter();
-      let zoom = this.olmap.getView().getZoom();
-      this.setState({ center, zoom });
-    });
-  }
-
-  shouldComponentUpdate(nextProps, nextState) {
-    let center = this.olmap.getView().getCenter();
-    let zoom = this.olmap.getView().getZoom();
-    if (center === nextState.center && zoom === nextState.zoom) return false;
-    return true;
   }
 
   render() {
-    this.updateMap(); // Update map on render?
-
     return <div id="map17" style={{ width: "100%", height: "360px" }} />;
   }
 }
